stop re-write CONFIGURED_PREFIX on cmake configure
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,26 +51,28 @@ include(CMakePrintHelpers)
 # Handle Installation Prefix
 # normally we will use the value from the command-line, if given DCMAKE_INSTALL_PREFIX
 # but if that is not given, look for a configured_prefix file from ./configure
-if(EXISTS "${CMAKE_SOURCE_DIR}/configured-prefix")
+if(EXISTS ${CMAKE_SOURCE_DIR}/configured-prefix)
   message(STATUS "configured-prefix file exists...")
-  configure_file("${CMAKE_SOURCE_DIR}/configured-prefix" "${CMAKE_BINARY_DIR}/configured-prefix" COPYONLY)
-  message(STATUS "copied configured-prefix to ${CMAKE_BINARY_DIR}/configured-prefix")
+  if (NOT EXISTS ${CMAKE_BINARY_DIR}/configured-prefix)
+    message(STATUS "copied configured-prefix to ${CMAKE_BINARY_DIR}/configured-prefix")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_SOURCE_DIR}/configured-prefix" "${CMAKE_BINARY_DIR}/configured-prefix")
+  endif()
+
   if(${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT})
+    message(STATUS "Writing configured-prefix file")
     set(CONFIGURED_PREFIX_CONTENTS INTERNAL PATH "Installation prefix from ./configure")
     file(STRINGS "${CMAKE_BINARY_DIR}/configured-prefix" CONFIGURED_PREFIX_CONTENTS)
     set(CMAKE_INSTALL_PREFIX ${CONFIGURED_PREFIX_CONTENTS} CACHE PATH "Installation Prefix" FORCE)
   endif()
-endif()
-
-if (DEFINED CONFIGURED_PREFIX_CONTENTS)
-  message(STATUS "Using configured prefix: ${CONFIGURED_PREFIX_CONTENTS}")
-  file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CONFIGURED_PREFIX_CONTENTS}\"")
-elseif(${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT})
-  message(STATUS "Using default prefix: ${CMAKE_INSTALL_PREFIX}")
+elseif(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX)
+  message(STATUS "Writing New CONFIGURED_PREFIX: ${CMAKE_INSTALL_PREFIX}")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
 else()
-  message(STATUS "Using cached install prefix: ${CMAKE_INSTALL_PREFIX}")
-  file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
+  file(STRINGS "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" CONFIGURED_PREFIX)
+  if(NOT "${CONFIGURED_PREFIX}" STREQUAL "\"${CMAKE_INSTALL_PREFIX}\"")
+    message(STATUS "Writing Updated CONFIGURED_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+    file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
+  endif()
 endif()
 
 
