--- a/frontend/lib/util/CMakeLists.txt
+++ b/frontend/lib/util/CMakeLists.txt
@@ -34,4 +34,5 @@ target_sources(libdyno-obj
                string-escapes.cpp
                subprocess.cpp
                terminal.cpp
+               version.cpp
               )
