--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -47,11 +47,11 @@ endif
 #
 # the location of the BUILD_VERSION file
 #
-BUILD_VERSION_FILE = $(COMPILER_ROOT)/main/BUILD_VERSION
+# BUILD_VERSION_FILE = $(COMPILER_ROOT)/main/BUILD_VERSION
 # configured prefix file
-CONFIGURED_PREFIX_FILE = $(COMPILER_BUILD)/CONFIGURED_PREFIX
+# CONFIGURED_PREFIX_FILE = $(COMPILER_BUILD)/CONFIGURED_PREFIX
 
-
+# PRETARGETS = $(BUILD_VERSION_FILE) $(CONFIGURED_PREFIX_FILE)
 TARGETS = $(CHPL)
 
 LIBS = -lm
@@ -91,13 +91,14 @@ $(CHPL_CONFIG_CHECK): | $(CHPL_BIN_DIR)
 	echo $(CHPL_MAKE_COMPILER_SUBDIR) > $(CHPL_CONFIG_CHECK)
 
 $(CHPL): FORCE $(CHPL_CONFIG_CHECK) $(COMPILER_BUILD) | $(CHPL_BIN_DIR)
-	@cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(CMAKE) --build . --target chpl --parallel
+	@cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(CMAKE) --build . --target chpl --parallel 4
 
 MAKEALLCHPLDOCSUBDIRS = $(CHPLDOC_SUBDIRS:%=%.makedir)
 
 $(CHPLDOC): $(MAKEALLCHPLDOCSUBDIRS) $(CHPLDOC_OBJS) | $(CHPL_BIN_DIR)
-	@cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(CMAKE) --build . --target chpldoc --parallel
-
+	@cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(CMAKE) --build . --target chpldoc --parallel 4
+	$(TAGS_COMMAND)
+	$(EBROWSE_COMMAND)
 chpldoc: $(CHPLDOC)
 
 $(COMPILER_BUILD):
