better handle configured-prefix, more parallel builds
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,10 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/configured-prefix)
     file(STRINGS "${CMAKE_BINARY_DIR}/configured-prefix" CONFIGURED_PREFIX_CONTENTS)
     set(CMAKE_INSTALL_PREFIX ${CONFIGURED_PREFIX_CONTENTS} CACHE PATH "Installation Prefix" FORCE)
   endif()
+  if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX)
+    message(STATUS "Writing New CONFIGURED_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+    file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
+endif()
 elseif(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX)
   message(STATUS "Writing New CONFIGURED_PREFIX: ${CMAKE_INSTALL_PREFIX}")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
