--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -91,11 +91,9 @@ $(CHPL_CONFIG_CHECK): | $(CHPL_BIN_DIR)
 	echo $(CHPL_MAKE_COMPILER_SUBDIR) > $(CHPL_CONFIG_CHECK)
 
 $(CHPL): FORCE $(CHPL_CONFIG_CHECK) $(COMPILER_BUILD) | $(CHPL_BIN_DIR)
-	if [ -f $(COMPILER_BUILD)/Makefile ]; then \
-		cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(MAKE) chpl; \
-	else \
-		cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(CMAKE) --build . --target chpl; \
-	fi
+	@cd $(COMPILER_BUILD) && $(CMAKE) $(CHPL_MAKE_HOME) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) && $(MAKE) chpl
+	$(TAGS_COMMAND)
+	$(EBROWSE_COMMAND)
 
 MAKEALLCHPLDOCSUBDIRS = $(CHPLDOC_SUBDIRS:%=%.makedir)
 
